--- a/CSVParser/CSVParser.csproj
+++ b/CSVParser/CSVParser.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Domain\Repositories\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
